Fixes #13.